--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,15 @@
   </head>
 
   <body>
+      <% flash.each do |name,message| %>
+  <div class="alert alert-<%=name%>" role="alert">
+
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+    <strong> <%=message%> </strong>
+  </div>
+  <%end%>
     <%= yield %>
   </body>
 </html>
